feat: remove chatgpt —

--- a/apps/landing/app/(default)/(mdx)/terms-of-service/page.mdx
+++ b/apps/landing/app/(default)/(mdx)/terms-of-service/page.mdx
@@ -18,7 +18,7 @@ Please read these Terms of Service ("Terms") carefully before accessing or using
 
 ## 2. Changes to Terms & Service
 
-We may revise these Terms —and may change, suspend, or discontinue any part of the Service—at any time in our sole discretion. If we make material changes, we will post the revised Terms and provide at least thirty (30) days' notice before they take effect. Your continued use of the Service after the effective date constitutes acceptance of the revised Terms.
+We may revise these Terms and may change, suspend, or discontinue any part of the Service at any time in our sole discretion. If we make material changes, we will post the revised Terms and provide at least thirty (30) days' notice before they take effect. Your continued use of the Service after the effective date constitutes acceptance of the revised Terms.
 
 ## 3. Eligibility & Compliance
 
@@ -70,7 +70,7 @@ Listings may reference websites operated by third parties. We do not control or 
 
 ### 7.2 Automated Placement & Your Responsibility
 
-When you activate or purchase any backlink package, our system automatically creates and publishes the agreed‑upon links—no manual preview or approval step is provided. Before enabling a package, make sure those links align with your own policies, brand, and risk tolerance. Because every website, search engine, and campaign is different, we cannot guarantee (a) the safety, reputation, or compliance of any third‑party site; (b) that a backlink will improve your rankings or traffic; or (c) that search‑engine algorithms or policies will remain unchanged.
+When you activate or purchase any backlink package, our system automatically creates and publishes the agreed‑upon links no manual preview or approval step is provided. Before enabling a package, make sure those links align with your own policies, brand, and risk tolerance. Because every website, search engine, and campaign is different, we cannot guarantee (a) the safety, reputation, or compliance of any third‑party site; (b) that a backlink will improve your rankings or traffic; or (c) that search‑engine algorithms or policies will remain unchanged.
 
 ### 7.3 Search‑Engine Guidelines
 
@@ -96,7 +96,7 @@ First‑time subscribers may request a full refund within seven (7) calendar day
 
 ## 9. Modifications, Suspension & Termination
 
-We may modify, suspend, or terminate the Service—or your access to it—at any time, with or without notice, for any reason, including if we believe you have violated these Terms. Upon termination, your license to use the Service will automatically terminate, but Sections 4, 5, 7, 10–16 will survive.
+We may modify, suspend, or terminate the Service or your access to it at any time, with or without notice, for any reason, including if we believe you have violated these Terms. Upon termination, your license to use the Service will automatically terminate, but Sections 4, 5, 7, 10–16 will survive.
 
 ## 10. Disclaimer of Warranties
 
@@ -109,7 +109,7 @@ The Service is provided "as is" and "as available." To the maximum extent permit
 
 ## 11. Limitation of Liability
 
-To the maximum extent permitted by law, in no event will Lovarank, its affiliates, licensors, or service providers be liable for any indirect, incidental, consequential, special, exemplary, or punitive damages, or for any lost profits, lost revenue, lost data, business interruption, or cost of substitute services, arising out of or in connection with the Service or these Terms—even if advised of the possibility of such damages. Our total cumulative liability for any claims relating to the Service will not exceed the amount you paid us, if any, for the Service in the twelve (12) months before the event giving rise to liability.
+To the maximum extent permitted by law, in no event will Lovarank, its affiliates, licensors, or service providers be liable for any indirect, incidental, consequential, special, exemplary, or punitive damages, or for any lost profits, lost revenue, lost data, business interruption, or cost of substitute services, arising out of or in connection with the Service or these Terms even if advised of the possibility of such damages. Our total cumulative liability for any claims relating to the Service will not exceed the amount you paid us, if any, for the Service in the twelve (12) months before the event giving rise to liability.
 
 ## 12. Indemnification
 
